fix text alignment

--- a/styles.css
+++ b/styles.css
@@ -760,6 +760,8 @@ body.alt-mode .container .alt-close {
   color: inherit;
   font-size: 0.85rem;
   font-weight: 400;
+  flex-basis: 100%;
+  padding-left: 1.85rem;
 }
 
 .about-intro-block {
